--- a/CMS.App/CMS.App/CMS.App.csproj
+++ b/CMS.App/CMS.App/CMS.App.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Core\" />
     <Folder Include="wwwroot\json\" />
     <Folder Include="wwwroot\Upload\" />
   </ItemGroup>
