--- a/CMS.App/CMS.App/appsettings.json
+++ b/CMS.App/CMS.App/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "data source=LAPTOP-UFF1V1E7\\SQLEXPRESS2016;initial catalog=CMSCore;user id=sa;password=12345;MultipleActiveResultSets=True;",
-    "IdentityConnection": "data source=LAPTOP-UFF1V1E7\\SQLEXPRESS2016;initial catalog=CMSCoreIdentity;user id=sa;password=12345;MultipleActiveResultSets=True;"
+    "DefaultConnection": "data source=LAPTOP-UFF1V1E7\\SQLEXPRESS2016;initial catalog=CMSApp;user id=sa;password=12345;MultipleActiveResultSets=True;",
+    //"DefaultConnection": "data source=LAPTOP-UFF1V1E7\\SQLEXPRESS2016;initial catalog=CMSCore;user id=sa;password=12345;MultipleActiveResultSets=True;",
+    //"IdentityConnection": "data source=LAPTOP-UFF1V1E7\\SQLEXPRESS2016;initial catalog=CMSCoreIdentity;user id=sa;password=12345;MultipleActiveResultSets=True;"
   }
 }
